corpus/statements.txt
============================================
Include Statements
============================================

PROGRAM TEST
  INCLUDE 'fftw.f03'
  a = 1.0
  INCLUDE 'debug_point.f03'
END PROGRAM

----

(translation_unit
  (program_block (identifier)
    (include_statement (filename))
    (assignment_statement (identifier) (number_literal))
    (include_statement (filename))))

============================================
Use Statements
============================================

PROGRAM TEST
  USE ISO_C_BINDING
  USE ISO_FORTRAN_ENV, ONLY : ERROR_UNIT, OUTPUT_UNIT
  USE MY_MODULE, ONLY:FUNC1
END PROGRAM

----

(translation_unit
  (program_block (identifier)
    (use_statement (module_name))
    (use_statement (module_name)
      (included_items (identifier) (identifier)))
    (use_statement (module_name)
      (included_items (identifier)))))

============================================
Implicit Statements
============================================

PROGRAM TEST
  IMPLICIT INTEGER(i - n), REAL(8)(r-z),  COMPLEX*8(a - c, d, e-h)
  IMPLICIT NONE
END PROGRAM

----

(translation_unit
  (program_block (identifier)
    (implicit_statement
      (intrinsic_type) (implicit_range)
      (intrinsic_type) (size (argument_list (number_literal))) (implicit_range)
      (intrinsic_type) (size) (implicit_range) (implicit_range) (implicit_range))
    (implicit_statement (none))))

============================================
Intrinsic Variable Declarations
============================================

PROGRAM TEST
  INTEGER, PARAMETER :: N = 100, MXLN = 255
  INTEGER :: i, j, k, l(*)
  REAL(16) :: data(0:N**2), rhs(N)
  REAL*8, TARGET :: tmp
  REAL(KIND=8), POINTER :: nxt => tmp
  LOGICAL, DIMENSION(:), ALLOCATABLE :: mask
  CHARACTER(LEN=:) :: message
  CHARACTER(LEN=*) :: options
  CHARACTER*(MXLN) :: errflag
END PROGRAM

----

(translation_unit
  (program_block (identifier)
    (variable_declaration (intrinsic_type) (type_qualifier)
      (assignment_statement (identifier) (number_literal))
      (assignment_statement (identifier) (number_literal)))
    (variable_declaration (intrinsic_type)
      (identifier)
      (identifier)
      (identifier)
      (call_expression (identifier) (argument_list (assumed_size))))
    (variable_declaration (intrinsic_type) (size (argument_list (number_literal)))
      (call_expression (identifier)
        (argument_list
          (extent_specifier (number_literal) (math_expression (identifier) (number_literal)))))
      (call_expression (identifier) (argument_list (identifier))))
    (variable_declaration (intrinsic_type) (size) (type_qualifier) (identifier))
    (variable_declaration
      (intrinsic_type) (size (argument_list (keyword_argument (identifier) (number_literal))))
      (type_qualifier)
      (pointer_association_statement (identifier) (identifier)))
    (variable_declaration
      (intrinsic_type)
      (type_qualifier (argument_list (extent_specifier)))
      (type_qualifier) (identifier))
    (variable_declaration
      (intrinsic_type)
        (size (argument_list (keyword_argument (identifier) (assumed_shape))))
      (identifier))
    (variable_declaration
      (intrinsic_type)
      (size (argument_list (keyword_argument (identifier) (assumed_size))))
      (identifier))
    (variable_declaration
      (intrinsic_type) (size (parenthesized_expression (identifier)))
      (identifier))))

============================================
Variable Modification Statements
============================================

PROGRAM TEST
  ALLOCATABLE :: i
  DIMENSION i(:, :), r(10)
  TARGET :: i
  PARAMETER (MAXLEN = 255, PI = 3.1415, SCALE_FACTOR = SIN(2 * PI))
  EQUIVALENCE (a, b, c), (d, e, f, r(1))
END PROGRAM

----

(translation_unit
  (program_block (identifier)
    (variable_modification (type_qualifier) (identifier))
    (variable_modification (type_qualifier)
      (call_expression (identifier) (argument_list (extent_specifier) (extent_specifier)))
      (call_expression (identifier) (argument_list (number_literal))))
    (variable_modification (type_qualifier) (identifier))
    (parameter_statement
      (parameter_assignment (identifier) (number_literal))
      (parameter_assignment (identifier) (number_literal))
      (parameter_assignment (identifier)
        (call_expression (identifier)
          (argument_list (math_expression (number_literal) (identifier))))))
    (equivalence_statement
      (equivalence_set (identifier) (identifier) (identifier))
      (equivalence_set
        (identifier)
        (identifier)
        (identifier)
        (call_expression (identifier) (argument_list (number_literal)))))))

============================================
Do Loops
============================================

PROGRAM TEST
    DO i = 1, 10
      x = 6**x
      OPEN(i, FILE="qwerty")
      CALL MYSUB(i, TEST=.TRUE.)
    END DO

    DO i = 1, UBOUND(arr), step
      CONTINUE
      GOTO 44
    ENDDO

    out44: DO i = 1,INT(SIN(9.0*i))
      DO j = 1, 100, -1
        CYCLE out44
      END DO
    END DO out44
END PROGRAM

----

(translation_unit
  (program_block (identifier)
    (do_loop_statement
      (loop_control_expression (identifier) (number_literal) (number_literal))
      (assignment_statement
        (identifier)
        (math_expression (number_literal) (identifier)))
      (call_expression (identifier)
        (argument_list
          (identifier)
          (keyword_argument (identifier) (string_literal))))
      (subroutine_call
        (call_expression (identifier)
          (argument_list
            (identifier)
            (keyword_argument (identifier) (boolean_literal))))))
    (do_loop_statement
      (loop_control_expression
        (identifier)
        (number_literal)
        (call_expression (identifier) (argument_list (identifier)))
        (identifier))
      (keyword_statement)
      (keyword_statement (statement_label)))
    (do_loop_statement
      (block_label_start_expression)
      (loop_control_expression
        (identifier)
        (number_literal)
        (call_expression
          (identifier)
          (argument_list
            (call_expression (identifier)
              (argument_list
                (math_expression (number_literal) (identifier)))))))
      (do_loop_statement
        (loop_control_expression
          (identifier)
          (number_literal)
          (number_literal)
          (number_literal))
        (keyword_statement (identifier)))
      (block_label))))

============================================
If Statements
============================================

PROGRAM TEST
  IF (x<7) y = 9

  IF (arg(1:1) == ADJUSTL(' r')) THEN
    r = 0
  ELSE IF (arg(1:1) .NE. CHAR(l(1))) THEN
    l = 67
  ELSE IF (arg(1:1) .NE. CHAR(m(1))) THEN
  ELSE
    n = 0
  ENDIF

  cond1: IF (y < 0) THEN
     y = 9
  ELSE  IF (x > 0) THEN cond1
   r = 9
   IF (arg(1:1)) THEN
     r = 0
   ELSE
     n = 0
   END IF
  ELSE cond1
    y = 10
  END IF cond1
END PROGRAM

----

(translation_unit
  (program_block (identifier)
    (if_statement
      (parenthesized_expression (relational_expression (identifier) (number_literal)))
      (assignment_statement (identifier) (number_literal)))
    (if_statement
      (parenthesized_expression
        (relational_expression
          (call_expression (identifier)
            (argument_list (extent_specifier (number_literal) (number_literal))))
          (call_expression (identifier)
            (argument_list (string_literal)))))
      (assignment_statement (identifier) (number_literal))
      (elseif_clause
        (parenthesized_expression
          (relational_expression
            (call_expression (identifier)
              (argument_list (extent_specifier (number_literal) (number_literal))))
            (call_expression (identifier)
              (argument_list
                (call_expression (identifier)
                  (argument_list (number_literal)))))))
        (assignment_statement (identifier) (number_literal)))
      (elseif_clause
        (parenthesized_expression
          (relational_expression
            (call_expression (identifier)
              (argument_list (extent_specifier (number_literal) (number_literal))))
            (call_expression (identifier)
              (argument_list
                (call_expression (identifier) (argument_list (number_literal))))))))
      (else_clause
        (assignment_statement (identifier) (number_literal))))
    (if_statement
      (block_label_start_expression)
      (parenthesized_expression
        (relational_expression (identifier) (number_literal)))
      (assignment_statement (identifier) (number_literal))
      (elseif_clause
        (parenthesized_expression
          (relational_expression (identifier) (number_literal)))
        (block_label)
        (assignment_statement (identifier) (number_literal))
        (if_statement
          (parenthesized_expression
            (call_expression (identifier)
              (argument_list (extent_specifier (number_literal) (number_literal)))))
          (assignment_statement (identifier) (number_literal))
          (else_clause
            (assignment_statement (identifier) (number_literal)))))
      (else_clause (block_label)
        (assignment_statement (identifier) (number_literal)))
      (block_label))))

============================================
Select Case Statements
============================================

PROGRAM TEST
  sign_case: SELECT CASE (number)
  CASE (: -1) sign_case
    sign = -1
  CASE (0) sign_case
    sign = 0
  CASE (1 :) sign_case
    sign = 1
  END SELECT sign_case

  SELECT CASE (c)
  CASE ('a' : 'm', 'n' : 'z')
    WRITE(*,*) 'lowercase letter'
  CASE ('A' : 'Z')
    WRITE(*,*) 'uppercase letter'
  CASE (WILDCARD_CHAR)
    WRITE(*,*) 'wildcard letter'
  CASE DEFAULT
    WRITE(*,*)  'Other characters, which may not be letters'
  END SELECT
END PROGRAM

----

(translation_unit
  (program_block (identifier)
    (select_case_statement (block_label_start_expression) (selector (identifier))
      (case_statement (case_value_range_list (extent_specifier (number_literal)))
        (block_label)
        (assignment_statement (identifier) (number_literal)))
      (case_statement (case_value_range_list (number_literal))
        (block_label)
        (assignment_statement (identifier) (number_literal)))
      (case_statement (case_value_range_list (extent_specifier (number_literal)))
        (block_label)
        (assignment_statement (identifier) (number_literal)))
      (block_label))
    (select_case_statement (selector (identifier))
      (case_statement
        (case_value_range_list
          (extent_specifier (string_literal) (string_literal))
          (extent_specifier (string_literal) (string_literal)))
        (write_statement
          (unit_identifier)
          (format_identifier)
          (output_item_list (string_literal))))
      (case_statement
        (case_value_range_list (extent_specifier (string_literal) (string_literal)))
        (write_statement
          (unit_identifier)
          (format_identifier)
          (output_item_list (string_literal))))
      (case_statement (case_value_range_list (identifier))
        (write_statement
          (unit_identifier)
          (format_identifier)
          (output_item_list (string_literal))))
      (case_statement (default)
        (write_statement
          (unit_identifier)
          (format_identifier)
          (output_item_list (string_literal)))))))

============================================
Format Statements
============================================

PROGRAM TEST
1 FORMAT('1234', a5, a5a5)
2 FORMAT(2F8.3, F6.2, //, :)
3 FORMAT(I0, A(2X, I3), 'test')
4 FORMAT(*(G15.8,:,','))
END PROGRAM

----

(translation_unit
  (program_block (identifier)
    (statement_label)
    (format_statement
      (transfer_items (string_literal) (edit_descriptor) (edit_descriptor)))
    (statement_label)
    (format_statement
      (transfer_items
        (edit_descriptor)
        (edit_descriptor)
        (edit_descriptor)
        (edit_descriptor)))
    (statement_label)
    (format_statement
      (transfer_items
        (edit_descriptor)
        (edit_descriptor)
        (edit_descriptor)
        (edit_descriptor)
        (string_literal)))
    (statement_label)
    (format_statement
      (transfer_items
        (edit_descriptor)
        (edit_descriptor)
        (edit_descriptor)
        (string_literal)))))

============================================
Read Statements
============================================

PROGRAM TEST
  READ *, x
  READ 9, x
  READ(*)
  READ(*, *)
  READ(10, 100) x, y, z
  READ(IOUNIT, FMT="(FORMAT STRING)") flags(:)
  READ(UNIT=IOUNIT, FMT="(FORMAT STRING)", IOSTAT=IOS, ADVANCE='NO') X
END PROGRAM

----

(translation_unit
  (program_block (identifier)
    (read_statement (format_identifier) (input_item_list (identifier)))
    (read_statement
      (format_identifier (statement_label_reference))
      (input_item_list (identifier)))
    (read_statement (unit_identifier))
    (read_statement (unit_identifier) (format_identifier))
    (read_statement
      (unit_identifier (number_literal))
      (format_identifier (statement_label_reference))
      (input_item_list (identifier) (identifier) (identifier)))
    (read_statement
      (unit_identifier (identifier))
      (keyword_argument (identifier) (string_literal))
      (input_item_list (call_expression (identifier) (argument_list (extent_specifier)))))
    (read_statement
      (keyword_argument (identifier) (identifier))
      (keyword_argument (identifier) (string_literal))
      (keyword_argument (identifier) (identifier))
      (keyword_argument (identifier) (string_literal))
      (input_item_list (identifier)))))

============================================
Print Statements
============================================

PROGRAM TEST
  PRINT *
  PRINT *, 'test'
  PRINT IUNIT, x, y, z
END PROGRAM

----

(translation_unit
  (program_block (identifier)
    (print_statement (format_identifier))
    (print_statement (format_identifier) (output_item_list (string_literal)))
    (print_statement
      (format_identifier (identifier))
      (output_item_list (identifier) (identifier) (identifier)))))

============================================
Write Statements
============================================

PROGRAM TEST
  WRITE(*)
  WRITE(*, *) ''
  WRITE(10, 100) x, y, z
  WRITE(IOUNIT, FMT="(FORMAT STRING)") flags(:)
  WRITE(UNIT=IOUNIT, FMT="(FORMAT STRING)", IOSTAT=IOS, ADVANCE='NO') X
END PROGRAM

----

(translation_unit
  (program_block (identifier)
    (write_statement (unit_identifier))
    (write_statement
      (unit_identifier)
      (format_identifier)
      (output_item_list (string_literal)))
    (write_statement
      (unit_identifier (number_literal))
      (format_identifier (statement_label_reference))
      (output_item_list (identifier) (identifier) (identifier)))
    (write_statement
      (unit_identifier (identifier))
      (keyword_argument (identifier) (string_literal))
      (output_item_list
        (call_expression (identifier) (argument_list (extent_specifier)))))
    (write_statement
      (keyword_argument (identifier) (identifier))
      (keyword_argument (identifier) (string_literal))
      (keyword_argument (identifier) (identifier))
      (keyword_argument (identifier) (string_literal))
      (output_item_list (identifier)))))
